--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -66,8 +66,8 @@
     text-underline-offset: 3px;
 
     &:hover {
-      color: $amber-dark;
-      text-decoration-color: $amber-dark;
+      color: $amber-ink;
+      text-decoration-color: $amber-ink;
     }
   }
 
